# PolyArithmeticCircuitsRL

./: .gitattributes  .gitignore  AlphaZero RL Circuit Discovery Plan.md  CURRENT_WORKFLOW.md  ComputationGraph.py  Documentation.md  EVALUATION_README.md  Gumbel AlphaZero Codex Readme.md  MCTS.md  README.md  README_learned_symbolic_search_full.md  abstract-exploring-bubble.md  build-game-board.py  check_random.py  check_random_circuit_true_complexity.py  checkpoint.pt  container.def  container_jax.def  converter.py  copygameboard.py  data_loader.py  demo_visualizer.py  encoding_walkthrough.md  eval_fixed_polys_jax.py  eval_ppo_mcts_jax.py  evaluate_ppo_model.py  evaluation_results_C6.json  example.md  game_board_C2.graphml  game_board_C3.graphml  gen.py  generator.py  iterativeList.py  main.py  mcts_iteration_timeline.py  mcts_timeline_sample.html  net.py  pyproject.toml  pytest.ini  random-path-on-game-board.py  (+13 more)
Camera-Ready-ICLR/: paper.tex
FL_ICML_PROOF/: example.md  factor_library_correctness.fdb_latexmk  factor_library_correctness.fls  factor_library_correctness.tex
GNNAlphaZero/: ActionSpace.py  (+12 more)
poly_circuit_rl/: README.md  __init__.py  config.py  pyproject.toml
poly_circuit_rl/baselines/: README.md  __init__.py  exhaustive.py  factorization.py  greedy.py  horner.py  memoized.py  symbolic_utils.py
poly_circuit_rl/configs/: README.md  default.yaml
poly_circuit_rl/core/: README.md  action_codec.py  builder.py  factor_library.py  fingerprints.py  poly.py
poly_circuit_rl/env/: README.md  __init__.py  circuit_env.py  expert_demos.py  factor.py  graph_cache.py  graph_enumeration.py  oracle_mask.py  samplers.py
poly_circuit_rl/poly_circuit_rl/: config.py
poly_circuit_rl/poly_circuit_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
poly_circuit_rl/poly_circuit_rl/core/: README.md  __init__.py  action_codec.py  builder.py  node.py  poly.py
poly_circuit_rl/poly_circuit_rl/env/: README.md  circuit_env.py  graph_enumeration.py  obs.py  samplers.py
poly_circuit_rl/poly_circuit_rl/rl/: README.md  __init__.py  agent.py  mcts.py  replay_buffer.py  trainer.py
poly_circuit_rl/rl/: README.md  agent.py  mcts.py  network.py  replay_buffer.py  trainer.py
poly_circuit_rl/runs/: best_lvl0.pt  final.pt
poly_circuit_rl/runs/2cpu_test/: best_lvl0.pt
poly_circuit_rl/scripts/: README.md  evaluate.py  train.py
poly_circuit_rl/tests/: README.md  test_agent.py  test_env.py  test_network.py  test_obs.py  test_replay_buffer.py
(+493 files in other folders)
