[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-guided-search"
version = "0.1.0"
description = "Exact core abstractions for learned symbolic search."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["wandb>=0.16"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
